Fixing spacing on main nav titles. https://tracker.nci.nih.gov/browse/OCEPROJECT-2773

--- a/CancerGov/_src/StyleSheets/_MegaMenu.scss
+++ b/CancerGov/_src/StyleSheets/_MegaMenu.scss
@@ -43,11 +43,11 @@
         display: block;
     }
     .nav-menu > .nav-item > .nav-item-title {
-        margin-right: -0.5px; /* to position the top-level main nav items properly */
+        margin-right: -1.25px; /* to position the top-level main nav items properly */
     }
     .nav-item > .nav-item-title > a {
         font-size: 14px;
-        padding: 14px 7.5px 8px;
+        padding: 14px 8px 8px;
     }
     .nav-search-bar nav {
         width: 75%;
